--- a/Settings.bundle/Root.plist
+++ b/Settings.bundle/Root.plist
@@ -112,23 +112,23 @@
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
-			<string>192.168.1.12:8080</string>
+			<string>http://192.168.1.32:1337/station/Vorto</string>
 			<key>Type</key>
 			<string>PSTextFieldSpecifier</string>
 			<key>Title</key>
-			<string>Name Service IP Address</string>
+			<string>Name Service URL</string>
 			<key>Key</key>
-			<string>ip_add_name_service</string>
+			<string>rest_api_url_get_user</string>
 		</dict>
 		<dict>
 			<key>DefaultValue</key>
-			<string>192.168.1.12:8080</string>
+			<string>http://192.168.1.32:1337/highscore/vorto</string>
 			<key>Type</key>
 			<string>PSTextFieldSpecifier</string>
 			<key>Title</key>
-			<string>Score Service IP Address</string>
+			<string>Score Service URL</string>
 			<key>Key</key>
-			<string>ip_add_score_service</string>
+			<string>rest_api_url_post_score</string>
 		</dict>
 	</array>
 	<key>StringsTable</key>
