Additional Settings to switch between Integrated and Test Mode

--- a/Settings.bundle/Root.plist
+++ b/Settings.bundle/Root.plist
@@ -6,6 +6,16 @@
 	<array>
 		<dict>
 			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Integrated Mode</string>
+			<key>Key</key>
+			<string>integrated_mode</string>
+			<key>DefaultValue</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 			<key>Title</key>
 			<string>Game Play</string>
